--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My Github Pages</h1>
+    <h1>Project Sites</h1>
+    <a href="nathanevaans.github.io/trippples">Trippples</a>
 </body>
 </html>
