debugging elemets not appearing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Project Sites</h1>
+    <p>test</p>
     <a href="nathanevaans.github.io/trippples">Trippples</a>
 </body>
 </html>
