--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Project Sites</h1>
     <p>test</p>
-    <a href="nathanevaans.github.io/trippples">Trippples</a>
+    <a href="https://nathanevaans.github.io/trippples">Trippples</a>
 </body>
 </html>
+
