design refactor and styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Web Project Demos</title>
 </head>
 <body>
-    <h1>Project Sites</h1>
-    <p>test</p>
-    <a href="https://nathanevaans.github.io/Trippples/">Trippples</a>
+<h1>Project Demos</h1>
+<div id="container">
+    <div class="card">
+        <a href="https://nathanevaans.github.io/Trippples/">Trippples</a>
+        <p>Implementation of the 1970s board game Trippples</p>
+    </div>
+    <div class="card">
+        <a href="https://nathanevaans.github.io/Minesweeper/">Minesweeper</a>
+        <p>Clone of the classic game Minesweeper</p>
+    </div>
+    <div class="card">
+        <a href="https://nathanevaans.github.io/Periodic-Table-Memoriser-Tool/">Periodic Table Memoriser</a>
+        <p>A tool that will help you memorise all aspects of the periodic table</p>
+    </div>
+</div>
 </body>
 </html>
 
