--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         <p>Clone of the classic game Minesweeper</p>
     </div>
     <div class="card">
-        <a href="https://nathanevaans.github.io/Periodic-Table-Memoriser-Tool/">Periodic Table Memoriser</a>
+        <a href="https://nathanevaans.github.io/lagrange-interpolation/">Lagrange Interpolation Visulisation</a>
+        <p>Click to add points and a polynomial will go through all the points</p>
+    </div>
+    <div class="card">
+        <a href="https://nathanevaans.github.io/quadtree/">Quadtree Visulisation</a>
+        <p>Click and drag to draw points and right click and drag to query the tree</p>
+    </div>
+    <div class="card">
+        <a href="https://nathanevaans.github.io/Periodic-Table-Memoriser-Tool/">Periodic Table Memoriser [WIP]</a>
         <p>A tool that will help you memorise all aspects of the periodic table</p>
     </div>
 </div>
