--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Web Project Demos</title>
 </head>
 <body>
+<h1>Interactive Projects</h1>
 <div id="container">
     <div class="card">
         <a href="https://nathanevaans.github.io/Trippples/">Trippples</a>
