changed title again

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tara Evans</title>
+    <title>Nathan Evans</title>
     <link rel="stylesheet" href="index.css">
     <link id="main" rel="stylesheet" href="home/index.css">
 </head>
