--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,9 @@
 <div id="container" class="centered">
     <div class="card">
+        <a href="https://nathanevaans.github.io/mazeGenViz/">Maze Generator</a>
+        <p>Visualisation of maze generation via backtracking</p>
+    </div>
+    <div class="card">
         <a href="https://nathanevaans.github.io/Trippples/">Trippples</a>
         <p>Implementation of the 1970s board game Trippples</p>
     </div>
