--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,9 @@
 <div id="container" class="centered">
     <div class="card">
+        <a href="nathanevaans.github.io/raytracer/">Ray Tracing Engine</a>
+        <p>Visualisation of a 2D maze as a 3D projection</p>
+    </div>
+    <div class="card">
         <a href="https://nathanevaans.github.io/mazeGenViz/">Maze Generator</a>
         <p>Visualisation of maze generation via backtracking</p>
     </div>
