--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <div id="container" class="centered">
     <div class="card">
-        <a href="nathanevaans.github.io/raytracer/">Ray Tracing Engine</a>
+        <a href="nathanevaans.github.io/rayTracer/">Ray Tracing Engine</a>
         <p>Visualisation of a 2D maze as a 3D projection</p>
     </div>
     <div class="card">
