--- a/projects/index.html
+++ b/projects/index.html
@@ -1,5 +1,9 @@
 <div id="container" class="centered">
     <div class="card">
+        <a href="https://nathanevaans.github.io/latexrenderer/">LaTeX Renderer</a>
+        <p>On the fly equation visualiser</p>
+    </div>
+    <div class="card">
         <a href="https://nathanevaans.github.io/rayTracer/">Ray Tracing Engine</a>
         <p>Visualisation of a 2D maze as a 3D projection</p>
     </div>
