--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,10 @@
         <p>On the fly equation visualiser</p>
     </div>
     <div class="card">
+        <a href="https://nathanevaans.github.io/DoublePendulum/">Double Pendulum</a>
+        <p>Let the CHAOS unfold</p>
+    </div>
+    <div class="card">
         <a href="https://nathanevaans.github.io/rayTracer/">Ray Tracing Engine</a>
         <p>Visualisation of a 2D maze as a 3D projection</p>
     </div>
