--- a/projects/index.html
+++ b/projects/index.html
@@ -1,11 +1,16 @@
 <div id="container" class="centered">
-    <div class="card"> 
-        <a href="https://nathanevaans.github.io/latexrenderer/">LaTeX Renderer</a>
-        <p>On the fly equation visualiser</p>
+    <div class="card">
+        <a href="https://nathanevaans.github.io/connect4/">Connect 4 AI</a>
+        <p>Minimax and neural network players</p>
     </div>
+    
     <div class="card">
         <a href="https://nathanevaans.github.io/DoublePendulum/">Double Pendulum</a>
         <p>Let the CHAOS unfold</p>
+    </div>
+    <div class="card"> 
+        <a href="https://nathanevaans.github.io/latexrenderer/">LaTeX Renderer</a>
+        <p>On the fly equation visualiser</p>
     </div>
     <div class="card">
         <a href="https://nathanevaans.github.io/rayTracer/">Ray Tracing Engine</a>
