--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 <div id="container" class="centered">
     <div class="card">
         <a href="https://nathanevaans.github.io/connect4/">Connect 4 AI</a>
-        <p>Minimax and neural network players</p>
+        <p>AI powered by Monte Carlo Tree Search</p>
     </div>
     
     <div class="card">
