--- a/index.html
+++ b/index.html
@@ -1,21 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Nathan Evans</title>
-    <link rel="stylesheet" href="index.css">
-    <link id="main" rel="stylesheet" href="home/index.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+        }
+
+        #container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .card {
+            width: 300px;
+            margin: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            transition: box-shadow 0.3s;
+        }
+
+        .card:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-title {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .card-description {
+            font-size: 14px;
+            color: #777;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-
-<div id="_nav">
-    <div id="projects" class="_nav-item no-select">Projects</div>
-    <div id="home" class="_nav-item no-select _nav-current">Nathan</div>
-    <div id="education" class="_nav-item no-select">Education</div>
+<div id="container">
 </div>
 
-<main></main>
+<script>
+    [
+        {
+            title: "Connect 4",
+            description: "Monte Carlo Tree Search AI",
+            link: "https://nathanevaans.github.io/connect4/"
+        },
+        {
+            title: "Double Pendulum Simulation",
+            description: "Let the chaos unfold",
+            link: "https://nathanevaans.github.io/DoublePendulum/"
+        },
+        {
+            title: "LaTeX Equation Notebook",
+            description: "A safe space to store your equations",
+            link: "https://nathanevaans.github.io/latexrenderer/"
+        },
+        {
+            title: "Ray Tracing Engine",
+            description: "Converts a 2D maze to 3D where you can walk around it",
+            link: "https://nathanevaans.github.io/rayTracer/"
+        },
+        {
+            title: "Maze Generator",
+            description: "Visualisation of how mazes are made with recursive backtracking",
+            link: "https://nathanevaans.github.io/mazeGenViz/"
+        },
+        {
+            title: "Trippples",
+            description: "Play against the minimax AI with alpha beta pruning for this 70s board game",
+            link: "https://nathanevaans.github.io/Trippples/"
+        },
+        {
+            title: "Minesweeper",
+            description: "Do really need to say anyhting here",
+            link: "https://nathanevaans.github.io/Minesweeper/"
+        },
+        {
+            title: "Lagrange Interpolation",
+            description: "Click to add points and watch it fit a polynomial through the points",
+            link: "https://nathanevaans.github.io/lagrange-interpolation/"
+        },
+        {
+            title: "Quad-Tree Visualisation",
+            description: "Click and drag to add points, right click and drag to query the tree",
+            link: "https://nathanevaans.github.io/quadtree/"
+        }
+    ].forEach(info => {
+        const card = document.createElement("div")
+        card.classList.add("card")
+        card.onclick = () => window.location.href = info.link
 
-<script src="index.js"></script>
+        const title = document.createElement("div")
+        title.classList.add("card-title")
+        title.textContent = info.title
+
+        const description = document.createElement("div")
+        description.classList.add("card-description")
+        description.textContent = info.description
+
+        card.append(title, description)
+
+        const container = document.getElementById("container")
+        container.append(card)
+    })
+</script>
 </body>
 </html>
