--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                 margin: 20px;
             }
         }
+
+        @media only screen and (max-width: 600px) {
+            .card {
+                width: 100%;
+                margin: 10px;
+            }
+        }
     </style>
 </head>
 <body>
