--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         },
         {
             title: "Minesweeper",
-            description: "Do really need to say anyhting here",
+            description: "Do I really need to say anything here",
             link: "https://nathanevaans.github.io/Minesweeper/",
             date: 2022
         },
