--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             border-radius: 4px;
         }
 
-        .card[data-year="2024"] .card-date {
+        .card[data-year="2023"] .card-date {
             background-color: #E7F6FF; /* Light Blue */
             color: #000; /* Black text color */
         }
 
-        .card[data-year="2023"] .card-date {
+        .card[data-year="2022"] .card-date {
             background-color: #FBE8FF; /* Light Purple */
             color: #000; /* Black text color */
         }
 
-        .card[data-year="2022"] .card-date {
+        .card[data-year="2021"] .card-date {
             background-color: #FFEBD9; /* Light Orange */
             color: #000; /* Black text color */
         }
@@ -146,6 +146,12 @@
             description: "Click and drag to add points, right click and drag to query the tree",
             link: "https://nathanevaans.github.io/quadtree/",
             date: 2022
+        },
+        {
+            title: "Java Neural Network Library",
+            description: "With convolutional layers",
+            link: "https://github.com/nathanevaans/neural-network-lib/",
+            date: 2021
         }
     ].forEach(info => {
         const card = document.createElement("div")
