--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             title: "Maze Generator",
             description: "Visualisation of how mazes are made with recursive backtracking",
             link: "https://nathanevaans.github.io/mazeGenViz/",
-            tags: ["Algorithms", "Visualisation", "Algorithms", "Visualisation"],
+            tags: ["Algorithms", "Visualisation"],
             date: 2022
         },
         {
