--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         {
             title: "Minesweeper",
             wip: false,
-            description: "Do really need to say anyhting here",
+            description: "Do I really need to say anything here",
             link: "https://nathanevaans.github.io/Minesweeper/",
             tags: ["Game"],
             date: 2022
