--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
             margin: 0;
-            padding: 20px;
+            padding: 20px 10px 20px 10px;
         }
 
         #container {
@@ -20,17 +20,15 @@
 
         .card {
             position: relative;
-
-            margin: 10px;
             padding: 20px;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             cursor: pointer;
             transition: box-shadow 0.3s;
-
             display: flex;
             flex-direction: column;
+            margin: 10px 20px 10px 20px;
         }
 
         .card:hover {
@@ -117,17 +115,17 @@
             color: #000; /* Black text color */
         }
 
-        @media only screen and (min-width: 780px) {
+        @media only screen and (min-width: 760px) {
             .card {
                 width: 300px;
-                margin: 20px;
+                margin-bottom: 20px;
             }
         }
 
-        @media only screen and (max-width: 780px) {
+        @media only screen and (max-width: 760px) {
             .card {
                 width: 100%;
-                margin: 10px;
+                margin-bottom: 10px;
             }
         }
     </style>
