--- a/index.html
+++ b/index.html
@@ -136,8 +136,16 @@
 <script>
     [
         {
-            title: "Connect 4",
+            title: "PINN Research Paper",
             wip: true,
+            description: "Exploration of the field",
+            link: "",
+            tags: ["Physics", "AI"],
+            date: 2023
+        },
+        {
+            title: "Connect 4",
+            wip: false,
             description: "Monte Carlo Tree Search AI",
             link: "https://nathanevaans.github.io/connect4/",
             tags: ["Game", "AI"],
