--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 <script>
     [
         {
-            title: "PINN Research Paper",
+            title: "PINN Summary Paper",
             wip: true,
-            description: "Exploration of the field",
+            description: "Formalising my research of this field",
             link: "",
             tags: ["Physics", "AI"],
             date: 2023
