--- a/index.html
+++ b/index.html
@@ -136,11 +136,18 @@
 <script>
     [
         {
+            title: "Countdown",
+            wip: true,
+            link: "nathanevaans.github.io/countdown/",
+            tags: ["Game", "Maths"],
+            date: 2023
+        },
+        {
             title: "PINN Summary Paper",
             wip: true,
             description: "Formalising my research of this field",
             link: "",
-            tags: ["Physics", "AI"],
+            tags: ["AI", "Physics"],
             date: 2023
         },
         {
@@ -148,7 +155,7 @@
             wip: false,
             description: "Monte Carlo Tree Search AI",
             link: "https://nathanevaans.github.io/connect4/",
-            tags: ["Game", "AI"],
+            tags: ["AI", "Game"],
             date: 2023
         },
         {
@@ -188,7 +195,7 @@
             wip: false,
             description: "Play against the minimax AI with alpha beta pruning for this 70s board game",
             link: "https://nathanevaans.github.io/Trippples/",
-            tags: ["Game", "AI"],
+            tags: ["AI", "Game"],
             date: 2022
         },
         {
@@ -220,7 +227,7 @@
             wip: false,
             description: "With convolutional layers",
             link: "https://github.com/nathanevaans/neural-network-lib/",
-            tags: ["Maths", "Algorithms"],
+            tags: ["Algorithms", "Maths"],
             date: 2021
         }
     ].forEach(info => {
