--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
         {
             title: "Countdown",
             wip: true,
-            link: "nathanevaans.github.io/countdown/",
+            description: "Clone with only the numbers",
+            link: "https://nathanevaans.github.io/countdown/",
             tags: ["Game", "Maths"],
             date: 2023
         },
