--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         {
             title: "Countdown",
             wip: true,
-            description: "Clone with only the numbers",
+            description: "Clone with only the numbers. Uses DFS to ensure the target is attainable",
             link: "https://nathanevaans.github.io/countdown/",
-            tags: ["Game", "Maths"],
+            tags: ["Algorithms", "Game", "Maths"],
             date: 2023
         },
         {
