--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
 <script>
     [
         {
+            title: "Stock Analysis",
+            wip: true,
+            description: "Streamlit app for analysing stocks",
+            link: "https://stock-analysis.streamlit.app",
+            tags: ["Finance", "Forecasting", "Maths"],
+            date: 2023
+        },
+        {
             title: "Countdown",
             wip: true,
             description: "Clone with only the numbers. Uses DFS to ensure the target is attainable",
