--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         {
             title: "Stock Analysis",
             wip: true,
-            description: "Streamlit app for analysing stocks",
+            description: "Streamlit app for forecasting stocks *not financial advise*",
             link: "https://stock-analysis.streamlit.app",
             tags: ["Finance", "Forecasting", "Maths"],
             date: 2023
