--- a/index.html
+++ b/index.html
@@ -135,30 +135,30 @@
 
 <script>
     [
-        {
+        /*{
             title: "Stock Analysis",
             wip: true,
             description: "Streamlit app for forecasting stocks *not financial advise*",
             link: "https://stock-analysis.streamlit.app",
             tags: ["Finance", "Forecasting", "Maths"],
             date: 2023
-        },
+        },*/
         {
             title: "Countdown",
-            wip: true,
+            wip: false,
             description: "Clone with only the numbers. Uses DFS to ensure the target is attainable",
             link: "https://nathanevaans.github.io/countdown/",
             tags: ["Algorithms", "Game", "Maths"],
             date: 2023
         },
-        {
+        /*{
             title: "PINN Summary Paper",
             wip: true,
             description: "Formalising my research of this field",
             link: "",
             tags: ["AI", "Physics"],
             date: 2023
-        },
+        },*/
         {
             title: "Connect 4",
             wip: false,
@@ -186,7 +186,7 @@
         {
             title: "Ray Tracing Engine",
             wip: false,
-            description: "Converts a 2D maze to 3D where you can walk around it",
+            description: "Converts a 2D maze to 3D which you can walk around",
             link: "https://nathanevaans.github.io/rayTracer/",
             tags: ["Visualisation"],
             date: 2022
@@ -202,7 +202,7 @@
         {
             title: "Trippples",
             wip: false,
-            description: "Play against the minimax AI with alpha beta pruning for this 70s board game",
+            description: "Play this 70's board game against the minimax AI with alpha beta pruning",
             link: "https://nathanevaans.github.io/Trippples/",
             tags: ["AI", "Game"],
             date: 2022
