--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
 
 <script>
     [
-        /*{
+        {
             title: "Stock Analysis",
             wip: true,
-            description: "Streamlit app for forecasting stocks *not financial advise*",
-            link: "https://stock-analysis.streamlit.app",
+            description: "Streamlit app for forecasting stocks *not financial advice*",
+            link: "",
             tags: ["Finance", "Forecasting", "Maths"],
             date: 2023
-        },*/
+        },
         {
             title: "Countdown",
             wip: false,
