--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
 <script>
     [
         {
+            title: "Numerical Integrator",
+            wip: true,
+            description: "Think desmos clone that visualises numerical integration techniques",
+            link: "",
+            tags: ["Algorithms", "Maths", "Visualisation"],
+            date: 2023
+        },
+        {
             title: "Stock Analysis",
             wip: true,
             description: "Streamlit app for forecasting stocks *not financial advice*",
