--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             title: "Numerical Integrator",
             wip: true,
             description: "Think desmos clone that visualises numerical integration techniques",
-            link: "",
+            link: "https://nathanevaans.github.io/numerical/",
             tags: ["Algorithms", "Maths", "Visualisation"],
             date: 2023
         },
