--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
 <script>
     [
         {
-            title: "Numerical Integrator",
-            wip: true,
-            description: "Think desmos clone that visualises numerical integration techniques",
+            title: "Interpolation",
+            wip: false,
+            description: "Visualise polynomial and composite interpolants for functions written in LaTeX",
             link: "https://nathanevaans.github.io/numerical/",
             tags: ["Algorithms", "Maths", "Visualisation"],
-            date: 2023
+            date: 2024
         },
         {
             title: "Stock Analysis",
