--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
 <script>
     [
         {
+            title: "Chat Room",
+            wip: true,
+            description: "Next.js + PartyKit version of my previous project minus the vulnerabilities",
+            link: "",
+            tags: ["Next.js, PartyKit"],
+            date: 2024
+        },
+        {
+            title: "Chat Room",
+            wip: true,
+            description: "WebSocket server written in golang, seeing what I could make in a new language",
+            link: "",
+            tags: ["Golang"],
+            date: 2024
+        },
+        {
             title: "Interpolation",
             wip: false,
             description: "Visualise polynomial and composite interpolants for functions written in LaTeX",
