--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             wip: true,
             description: "Next.js + PartyKit version of my previous project minus the vulnerabilities",
             link: "",
-            tags: ["Next.js, PartyKit"],
+            tags: ["Next.js", "PartyKit"],
             date: 2024
         },
         {
