--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
             color: #000; /* Black text color */
         }
 
+        .card[data-year="2025"] .card-date {
+            background-color: #FFAAD9; /* Light Orange */
+            color: #000; /* Black text color */
+        }
+
         @media only screen and (min-width: 760px) {
             .card {
                 width: 300px;
@@ -135,6 +140,14 @@
 
 <script>
     [
+         {
+            title: "Ornstein-Uhlenbeck Process Visualisation",
+            wip: false,
+            description: "TODO",
+            link: "https://ornstein-uhlenbeck.streamlit.app",
+            tags: ["TODO"],
+            date: 2025
+        },
         {
             title: "Chat Room",
             wip: true,
